--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
         class="fixed top-0 right-0 h-full w-4/5 max-w-sm bg-white z-[200] transform translate-x-full transition-transform duration-300 ease-in-out shadow-2xl flex flex-col lg:hidden"
         id="mobile-sidebar">
         <div class="p-6 border-b border-gray-100 flex justify-between items-center">
-            <!-- <h2 class="text-navy-deep text-lg font-extrabold tracking-tight">HOSPITAL<span
-                    class="font-light text-primary">MIN</span></h2>
-            <label class="p-2 cursor-pointer" for="mobile-menu-checkbox">
-                <span class="material-symbols-outlined text-gray-500">close</span>
-            </label> -->
-            <img src="assets/img/logo_caleta_nuevo.png" width="200">
+            <img src="https://hcaleta.gob.pe/img/logo_caleta_nuevo.png" width="200">
             <label class="p-2 cursor-pointer" for="mobile-menu-checkbox">
                 <span class="material-symbols-outlined text-gray-500">close</span>
             </label>
@@ -105,57 +100,7 @@
             <button class="w-full bg-primary text-white py-4 rounded-xl font-bold">Agendar Cita</button>
         </div>
     </aside>
-    <!-- <header class="w-full relative z-50">
-        <div class="w-full bg-navy-deep text-white/80 py-2.5 border-b border-white/5">
-            <div
-                class="max-w-[1440px] mx-auto px-8 flex items-center justify-between text-[11px] font-medium tracking-wide">
-                <div class="flex items-center gap-6">
-                    <a class="flex items-center gap-2 hover:text-white transition-colors"
-                        href="mailto:mesa_partes@hcaleta.gob.pe">
-                        <span class="material-symbols-outlined text-sm text-primary">mail</span>
-                        mesa_partes@hcaleta.gob.pe
-                    </a>
-                    <div class="hidden md:flex items-center gap-2 border-l border-white/20 pl-6">
-                        <span class="material-symbols-outlined text-sm text-primary">schedule</span>
-                        <span>Lun - Vie: 08:00AM - 15:30PM </span>
-                    </div>
-                </div>
-                <div class="hidden md:flex items-center gap-4">
-                    <span class="text-white/40">Siguenos:</span>
-                    <div class="flex gap-3">
-                        <a class="hover:text-primary transition-colors" href="#">FB</a>
-                        <a class="hover:text-primary transition-colors" href="#">IG</a>
-                        <a class="hover:text-primary transition-colors" href="#">LI</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <nav class="sticky top-0 w-full bg-white shadow-sm border-b border-gray-200 z-[100]">
-            <div class="max-w-[1440px] mx-auto px-8 h-20 flex items-center justify-between">
-                <div class="flex items-center gap-3">
-                    <img src="assets/img/logo_caleta_nuevo.png" width="200">
-                </div>
-                <div class="hidden md:flex items-center gap-8">
-                    <a class="text-sm font-bold text-navy-deep hover:text-primary transition-colors"
-                        href="#">Especialidades</a>
-                    <a class="text-sm font-bold text-navy-deep hover:text-primary transition-colors" href="#">Staff</a>
-                    <a class="text-sm font-bold text-navy-deep hover:text-primary transition-colors"
-                        href="#">Servicios</a>
-                    <a class="text-sm font-bold text-navy-deep hover:text-primary transition-colors" href="#">Sedes</a>
-                </div>
-                <div class="flex items-center gap-4">
-                    <button
-                        class="hidden lg:block px-6 py-2.5 bg-primary text-white rounded-lg text-sm font-bold shadow-lg shadow-primary/20 hover:scale-[1.02] transition-transform">
-                        Agendar Cita
-                    </button>
-                    <label class="lg:hidden flex items-center justify-center size-10 text-navy-deep cursor-pointer"
-                        for="mobile-menu-checkbox">
-                        <span class="material-symbols-outlined text-3xl">menu</span>
-                    </label>
-                </div>
-            </div>
-        </nav>
-    </header> -->
+    
     <div class="w-full bg-navy-deep text-white/80 py-2.5 border-b border-white/5">
         <div
             class="max-w-[1440px] mx-auto px-8 flex items-center justify-between text-[11px] font-medium tracking-wide">
@@ -183,7 +128,7 @@
     <nav class="sticky z-50 top-0 w-full bg-white shadow-sm border-b border-gray-200 z-[100]">
         <div class="max-w-[1440px] mx-auto px-8 h-20 flex items-center justify-between">
             <div class="flex items-center gap-3">
-                <img src="assets/img/logo_caleta_nuevo.png" width="200">
+                <img src="https://hcaleta.gob.pe/img/logo_caleta_nuevo.png" width="200">
             </div>
             <div class="hidden md:flex items-center gap-8">
                 <a class="text-sm font-bold text-navy-deep hover:text-primary transition-colors"
@@ -613,12 +558,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-12 mb-20">
                 <div class="space-y-6">
                     <div class="flex items-center gap-3">
-                        <!-- <div class="text-primary flex size-8 items-center justify-center bg-primary/10 rounded-lg">
-                            <span class="material-symbols-outlined text-2xl">medical_services</span>
-                        </div>
-                        <h2 class="text-navy-deep text-lg font-extrabold tracking-tight italic">HOSPITAL<span
-                                class="font-light text-primary">MIN</span></h2> -->
-                        <img src="assets/img/logo_caleta_nuevo.png" width="200">
+                        <img src="https://hcaleta.gob.pe/img/logo_caleta_nuevo.png" width="200">
                     </div>
                     <p class="text-gray-500 text-sm leading-relaxed">Referente en salud privada, comprometidos con la
                         excelencia médica y el trato humano desde 1995.</p>
